app/infra/api-autenticacao/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: api-autenticacao
    labels:
      app: api-autenticacao
      tags.datadoghq.com/env: "prd"
      tags.datadoghq.com/service: "api-autenticacao"
      tags.datadoghq.com/version: "1.0.0"
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 2
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: api-autenticacao
        tags.datadoghq.com/env: "prd"
        tags.datadoghq.com/service: "api-autenticacao"
        tags.datadoghq.com/version: "1.0.0"
        admission.datadoghq.com/enabled: "true"
      annotations:
        admission.datadoghq.com/dotnet-lib.version: v3.14.2
        ad.datadoghq.com/app.logs: '[{"source":"csharp", "service":"api-autenticacao", "tags":["api:api-autenticacao"]}]'
    spec:
      containers:
      - name: api-autenticacao
        image: victordomingues/esalq-tcc-api-autenticacao:latest
        ports:
        - containerPort: 80
  selector:
    matchLabels:
      app: api-autenticacao
